fix Modal overlay z-index

--- a/packages/pw-component-modal/style.css
+++ b/packages/pw-component-modal/style.css
@@ -37,6 +37,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 11;
   background-color: rgba(0, 0, 0, 0.75);
 }
 
